--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     &nbsp -->
     <a href="https://github.com/IshitaG-2002IGK" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://medium.com/@#/" style="color: white;"><i class="fab fa-medium" style="font-size: 2em;"></i></a>
+    <a href="https://medium.com/@ishitagops12" style="color: white;"><i class="fab fa-medium" style="font-size: 2em;"></i></a>
   </div>
 </div>
 
