--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div id="particles">
   <div id="intro">
-      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Ishita Gopalakrishnan&nbsp<a href="https://linktr.ee/Ishita_Gopalakrishnan" style="color: white;"><img src="https://img.lovepik.com/original_origin_pic/18/09/09/3d686f89303c660f8e033e23a6521700.png_wh300.png" height="35" width="35"></a></h2>
+      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Ishita Gopalakrishnan&nbsp<a href="https://linktr.ee/Ishita_Gopalakrishnan" style="color: white;"><img src="https://cdn.dribbble.com/users/1237300/screenshots/6478927/__-1_1_____.gif" height="50" width="50"></a></h2>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <a href="https://www.linkedin.com/in/ishita-gopalakrishnan-92949320b/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
     &nbsp
