--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <a href="https://www.linkedin.com/in/ishita-gopalakrishnan-92949320b/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
     &nbsp
-    <!-- <a href="https://www.facebook.com/#/" style="color: white;"><i class="fab fa-facebook" style="font-size: 2em;"></i></a>
-    &nbsp -->
+    <a href="https://linktr.ee/Ishita_Gopalakrishnan" style="color: white;"><i class="fas fa-link" style="font-size: 2em;"></i></a>
+
+    &nbsp
     <a href="https://github.com/IshitaG-2002IGK" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="https://medium.com/@ishitagops12" style="color: white;"><i class="fab fa-medium" style="font-size: 2em;"></i></a>
