--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div id="particles">
   <div id="intro">
-      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Ishita Gopalakrishnan&nbsp<a href="https://linktr.ee/Ishita_Gopalakrishnan" style="color: white;"><img src="https://archive.org/download/clickme_202004/tapme.gif" height="60" width="70"></a></h2>
+      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Ishita Gopalakrishnan&nbsp<a href="https://linktr.ee/Ishita_Gopalakrishnan" style="color: white;"><img src="cutegif.gif" height="60" width="70"></a></h2>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <a href="https://www.linkedin.com/in/ishita-gopalakrishnan-92949320b/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
     &nbsp
